// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentWorkspace page "loading" content renders correctly 1`] = `"<Blueprint4.NonIdealState className=\\"WorkspaceParent bp4-dark\\" description=\\"Getting mission ready...\\" icon={{...}} iconSize={48} layout=\\"vertical\\" />"`;

exports[`AssessmentWorkspace page with ContestVoting question renders correctly 1`] = `
"<div className=\\"WorkspaceParent bp4-dark\\">
  <Blueprint4.Dialog className=\\"assessment-briefing\\" isOpen={false} canOutsideClickClose={true}>
    <Blueprint4.Card elevation={0} interactive={false}>
      <Memo(Markdown) content=\\"Vote for your favourite contest entries here!\\" />
      <Blueprint4.Button className=\\"assessment-briefing-button\\" onClick={[Function: onClick]} text=\\"Continue\\" />
    </Blueprint4.Card>
  </Blueprint4.Dialog>
  <Blueprint4.Dialog className=\\"assessment-reset\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: closeOverlay]} title=\\"Confirmation: Reset editor?\\" canOutsideClickClose={true}>
    <div className=\\"bp4-dialog-body\\">
      <Memo(Markdown) content=\\"Are you sure you want to reset the template?\\" />
      <Memo(Markdown) content=\\"*Note this will not affect the saved copy of your program, unless you save over it.*\\" />
    </div>
    <div className=\\"bp4-dialog-footer\\">
      <Blueprint4.ButtonGroup>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"none\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function: closeOverlay]}>
          Cancel
        </Blueprint4.Button>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"danger\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function (anonymous)]}>
          Confirm
        </Blueprint4.Button>
      </Blueprint4.ButtonGroup>
    </div>
  </Blueprint4.Dialog>
  <Workspace controlBarProps={{...}} editorContainerProps={{...}} handleSideContentHeightChange={[Function: handleSideContentHeightChange]} hasUnsavedChanges={false} mcqProps={{...}} sideBarProps={{...}} sideContentHeight={[undefined]} sideContentProps={{...}} replProps={{...}} />
</div>"
`;

exports[`AssessmentWorkspace page with MCQ question renders correctly 1`] = `
"<div className=\\"WorkspaceParent bp4-dark\\">
  <Blueprint4.Dialog className=\\"assessment-briefing\\" isOpen={false} canOutsideClickClose={true}>
    <Blueprint4.Card elevation={0} interactive={false}>
      <Memo(Markdown) content=\\"This is the mission briefing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas viverra, sem scelerisque ultricies ullamcorper, sem nibh sollicitudin enim, at ultricies sem orci eget odio. Pellentesque varius et mauris quis vestibulum. Etiam in egestas dolor. Nunc consectetur, sapien sodales accumsan convallis, lectus mi tempus ipsum, vel ornare metus turpis sed justo. Vivamus at tellus sed ex convallis commodo at in lectus. Pellentesque pharetra pulvinar sapien pellentesque facilisis. Curabitur efficitur malesuada urna sed aliquam. Quisque massa metus, aliquam in sagittis non, cursus in sem. Morbi vel nunc at nunc pharetra lobortis. Aliquam feugiat ultricies ipsum vel sollicitudin. Vivamus nulla massa, hendrerit sit amet nibh quis, porttitor convallis nisi. \\" />
      <Blueprint4.Button className=\\"assessment-briefing-button\\" onClick={[Function: onClick]} text=\\"Continue\\" />
    </Blueprint4.Card>
  </Blueprint4.Dialog>
  <Blueprint4.Dialog className=\\"assessment-reset\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: closeOverlay]} title=\\"Confirmation: Reset editor?\\" canOutsideClickClose={true}>
    <div className=\\"bp4-dialog-body\\">
      <Memo(Markdown) content=\\"Are you sure you want to reset the template?\\" />
      <Memo(Markdown) content=\\"*Note this will not affect the saved copy of your program, unless you save over it.*\\" />
    </div>
    <div className=\\"bp4-dialog-footer\\">
      <Blueprint4.ButtonGroup>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"none\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function: closeOverlay]}>
          Cancel
        </Blueprint4.Button>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"danger\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function (anonymous)]}>
          Confirm
        </Blueprint4.Button>
      </Blueprint4.ButtonGroup>
    </div>
  </Blueprint4.Dialog>
  <Workspace controlBarProps={{...}} editorContainerProps={[undefined]} handleSideContentHeightChange={[Function: handleSideContentHeightChange]} hasUnsavedChanges={false} mcqProps={{...}} sideBarProps={{...}} sideContentHeight={[undefined]} sideContentProps={{...}} replProps={{...}} />
</div>"
`;

exports[`AssessmentWorkspace page with overdue assessment renders correctly 1`] = `
"<div className=\\"WorkspaceParent bp4-dark\\">
  <Blueprint4.Dialog className=\\"assessment-briefing\\" isOpen={false} canOutsideClickClose={true}>
    <Blueprint4.Card elevation={0} interactive={false}>
      <Memo(Markdown) content=\\"This is the mission briefing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas viverra, sem scelerisque ultricies ullamcorper, sem nibh sollicitudin enim, at ultricies sem orci eget odio. Pellentesque varius et mauris quis vestibulum. Etiam in egestas dolor. Nunc consectetur, sapien sodales accumsan convallis, lectus mi tempus ipsum, vel ornare metus turpis sed justo. Vivamus at tellus sed ex convallis commodo at in lectus. Pellentesque pharetra pulvinar sapien pellentesque facilisis. Curabitur efficitur malesuada urna sed aliquam. Quisque massa metus, aliquam in sagittis non, cursus in sem. Morbi vel nunc at nunc pharetra lobortis. Aliquam feugiat ultricies ipsum vel sollicitudin. Vivamus nulla massa, hendrerit sit amet nibh quis, porttitor convallis nisi. \\" />
      <Blueprint4.Button className=\\"assessment-briefing-button\\" onClick={[Function: onClick]} text=\\"Continue\\" />
    </Blueprint4.Card>
  </Blueprint4.Dialog>
  <Blueprint4.Dialog className=\\"assessment-reset\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: closeOverlay]} title=\\"Confirmation: Reset editor?\\" canOutsideClickClose={true}>
    <div className=\\"bp4-dialog-body\\">
      <Memo(Markdown) content=\\"Are you sure you want to reset the template?\\" />
      <Memo(Markdown) content=\\"*Note this will not affect the saved copy of your program, unless you save over it.*\\" />
    </div>
    <div className=\\"bp4-dialog-footer\\">
      <Blueprint4.ButtonGroup>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"none\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function: closeOverlay]}>
          Cancel
        </Blueprint4.Button>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"danger\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function (anonymous)]}>
          Confirm
        </Blueprint4.Button>
      </Blueprint4.ButtonGroup>
    </div>
  </Blueprint4.Dialog>
  <Workspace controlBarProps={{...}} editorContainerProps={{...}} handleSideContentHeightChange={[Function: handleSideContentHeightChange]} hasUnsavedChanges={false} mcqProps={{...}} sideBarProps={{...}} sideContentHeight={[undefined]} sideContentProps={{...}} replProps={{...}} />
</div>"
`;

exports[`AssessmentWorkspace page with programming question renders correctly 1`] = `
"<div className=\\"WorkspaceParent bp4-dark\\">
  <Blueprint4.Dialog className=\\"assessment-briefing\\" isOpen={false} canOutsideClickClose={true}>
    <Blueprint4.Card elevation={0} interactive={false}>
      <Memo(Markdown) content=\\"This is the mission briefing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas viverra, sem scelerisque ultricies ullamcorper, sem nibh sollicitudin enim, at ultricies sem orci eget odio. Pellentesque varius et mauris quis vestibulum. Etiam in egestas dolor. Nunc consectetur, sapien sodales accumsan convallis, lectus mi tempus ipsum, vel ornare metus turpis sed justo. Vivamus at tellus sed ex convallis commodo at in lectus. Pellentesque pharetra pulvinar sapien pellentesque facilisis. Curabitur efficitur malesuada urna sed aliquam. Quisque massa metus, aliquam in sagittis non, cursus in sem. Morbi vel nunc at nunc pharetra lobortis. Aliquam feugiat ultricies ipsum vel sollicitudin. Vivamus nulla massa, hendrerit sit amet nibh quis, porttitor convallis nisi. \\" />
      <Blueprint4.Button className=\\"assessment-briefing-button\\" onClick={[Function: onClick]} text=\\"Continue\\" />
    </Blueprint4.Card>
  </Blueprint4.Dialog>
  <Blueprint4.Dialog className=\\"assessment-reset\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: closeOverlay]} title=\\"Confirmation: Reset editor?\\" canOutsideClickClose={true}>
    <div className=\\"bp4-dialog-body\\">
      <Memo(Markdown) content=\\"Are you sure you want to reset the template?\\" />
      <Memo(Markdown) content=\\"*Note this will not affect the saved copy of your program, unless you save over it.*\\" />
    </div>
    <div className=\\"bp4-dialog-footer\\">
      <Blueprint4.ButtonGroup>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"none\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function: closeOverlay]}>
          Cancel
        </Blueprint4.Button>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"danger\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function (anonymous)]}>
          Confirm
        </Blueprint4.Button>
      </Blueprint4.ButtonGroup>
    </div>
  </Blueprint4.Dialog>
  <Workspace controlBarProps={{...}} editorContainerProps={{...}} handleSideContentHeightChange={[Function: handleSideContentHeightChange]} hasUnsavedChanges={false} mcqProps={{...}} sideBarProps={{...}} sideContentHeight={[undefined]} sideContentProps={{...}} replProps={{...}} />
</div>"
`;

exports[`AssessmentWorkspace renders Grading tab correctly if the question has been graded 1`] = `
"<div className=\\"WorkspaceParent bp4-dark\\">
  <Blueprint4.Dialog className=\\"assessment-briefing\\" isOpen={false} canOutsideClickClose={true}>
    <Blueprint4.Card elevation={0} interactive={false}>
      <Memo(Markdown) content=\\"This is the closed mission briefing. The save button should not be there. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas viverra, sem scelerisque ultricies ullamcorper, sem nibh sollicitudin enim, at ultricies sem orci eget odio. Pellentesque varius et mauris quis vestibulum. Etiam in egestas dolor. Nunc consectetur, sapien sodales accumsan convallis, lectus mi tempus ipsum, vel ornare metus turpis sed justo. Vivamus at tellus sed ex convallis commodo at in lectus. Pellentesque pharetra pulvinar sapien pellentesque facilisis. Curabitur efficitur malesuada urna sed aliquam. Quisque massa metus, aliquam in sagittis non, cursus in sem. Morbi vel nunc at nunc pharetra lobortis. Aliquam feugiat ultricies ipsum vel sollicitudin. Vivamus nulla massa, hendrerit sit amet nibh quis, porttitor convallis nisi. \\" />
      <Blueprint4.Button className=\\"assessment-briefing-button\\" onClick={[Function: onClick]} text=\\"Continue\\" />
    </Blueprint4.Card>
  </Blueprint4.Dialog>
  <Blueprint4.Dialog className=\\"assessment-reset\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: closeOverlay]} title=\\"Confirmation: Reset editor?\\" canOutsideClickClose={true}>
    <div className=\\"bp4-dialog-body\\">
      <Memo(Markdown) content=\\"Are you sure you want to reset the template?\\" />
      <Memo(Markdown) content=\\"*Note this will not affect the saved copy of your program, unless you save over it.*\\" />
    </div>
    <div className=\\"bp4-dialog-footer\\">
      <Blueprint4.ButtonGroup>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"none\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function: closeOverlay]}>
          Cancel
        </Blueprint4.Button>
        <Blueprint4.Button disabled={false} fill={false} intent=\\"danger\\" minimal={false} className=\\"\\" type={[undefined]} onClick={[Function (anonymous)]}>
          Confirm
        </Blueprint4.Button>
      </Blueprint4.ButtonGroup>
    </div>
  </Blueprint4.Dialog>
  <Workspace controlBarProps={{...}} editorContainerProps={{...}} handleSideContentHeightChange={[Function: handleSideContentHeightChange]} hasUnsavedChanges={false} mcqProps={{...}} sideBarProps={{...}} sideContentHeight={[undefined]} sideContentProps={{...}} replProps={{...}} />
</div>"
`;
